# iLogoExtractor

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: api.cpp  api.hpp  extraction.cpp  extraction.hpp  ipsw.cpp  ipsw.hpp  utilities.cpp  utilities.hpp
